first round of cuts complete

--- a/chap1.tex
+++ b/chap1.tex
@@ -47,6 +47,10 @@
 %%=====================================
 
 
+% STAGE DIRECTION: if the development history is often forgotten, the
+% imagined through-line of self-driving vehicles has other sources and
+% other histories; AI, cousins in Air/Space, factory automation
+
 The popular narratives about self-driving vehicles have not appeared
 out of nowhere. But what are their roots? From what histories, fields,
 and technological ideologies do these stories come? Journalistic
@@ -1839,6 +1843,15 @@ advancements are seen as valuable, or how often the features get
 turned off in day-to-day use. 
 
 \section{Conclusion}
+
+% STAGE DIRECTION: we have seen that the history is more nuanced than
+% is often recognized in this discussion; the imagined narrative is
+% not issuing only from here; much of it is about expectations and
+% dreams, shaped by visions of the future from technologists and
+% others; it behooves us to take a better look at these future
+% visions, and examine their assumptions and outcomes in detail; while
+% we do so, we try to answer the question: Why do these kinds of
+% narratives and assumptions matter in our dreams?
 
 This historical journey has attempted
 to shed light on some of the unspoken assumptions behind autonomous
