--- a/intro.tex
+++ b/intro.tex
@@ -698,10 +698,17 @@ historical examples.
 
 %%TODO (DONE) consider: ; or even to some extent ontological position of a
 %%self-driving car that ``knows'' nothing 
-
-The nature of the self-driving car as it will appear in
-the near future is not self-evident, no matter how loud Google's voice
-or how large their investment. These technologies and visions of them
+ A few
+articles about automated vehicles remember the history, from the 1939
+World's Fair \cite{CBSPetersen} to the Firebird concept cars
+\cite{walshVs} to Dickmanns's work in the 
+1990s \cite{HCRIDriverless} and DARPA's investments in automated
+driving \cite{economistSR}---the latter largely stripped of its
+ military valences. But these are generally subsumed by an imagined
+ historical through-line. The nature of the self-driving car as it will appear in
+the near future is not self-evident, however, no matter how loud Google's voice
+or how large their investment.
+ These technologies and visions of them
 enact certain ideologically charged activities---such as supporting
 particular research agendas---and these can be traced through the
 histories and current discourses of the fields involved.
